// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteFilterListModal false canDeleteFilter privilege renders as disabled delete button 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    type="button"
  >
    Delete
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders as delete button after opening and closing modal 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    type="button"
  >
    Delete
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders as disabled delete button when no lists selected 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    type="button"
  >
    Delete
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders as enabled delete button when a list is selected 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    type="button"
  >
    Delete
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders modal after clicking delete button 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    type="button"
  >
    Delete
  </EuiButton>
  <EuiOverlayMask>
    <EuiConfirmModal
      buttonColor="danger"
      cancelButtonText="Cancel"
      className="eui-textBreakWord"
      confirmButtonText="Delete"
      defaultFocusedButton="confirm"
      onCancel={[Function]}
      onConfirm={[Function]}
      title="Delete 2 filter lists"
    >
      <p>
        Are you sure you want to delete 
        these filter lists
        ?
      </p>
    </EuiConfirmModal>
  </EuiOverlayMask>
</div>
`;
